package Ex44;

/*
 *  UCF COP3330 Summer 2021 Assignment 3 Solution
 *  Copyright 2021 Richard Pekarski
 */

public class Output {
    public void printOutput(products product_info) {
        System.out.print(product_info);
    }
}
